live/lab/postgres/pg1-parules/2-sts-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg1-parules
  namespace: pas-dev
  labels:
    app: pg1-parules
spec:
  serviceName: pg1-parules-headless
  replicas: 1
  selector:
    matchLabels:
      app: pg1-parules
  template:
    metadata:
      labels:
        app: pg1-parules
    spec:
      containers:
      - name: pg1-parules
        image: docker-local.artifactory.medimpact.com/dockerhub/postgres:15.1
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: "1000m"
            memory: "1000Mi"
          requests:
            cpu: "100m"
            memory: "150Mi"
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      securityContext:
        runAsUser: 70
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
       - ReadWriteOnce
      storageClassName: pas-dev
      resources:
        requests:
          storage: 10Gi
  updateStrategy:
    type: RollingUpdate
